test/neg/neg-vis2.errc
Source iterator's value type not convertible to T const.
